--- a/src/app/working-area/board-panel/board-panel.component.html
+++ b/src/app/working-area/board-panel/board-panel.component.html
@@ -4,7 +4,8 @@
     <div cdkDropListGroup class="col">
         <div class="example-container" *ngFor="let stack of stackList">
             <div class="row align-items-center">
-                <button (click)="updateStackPosition(stack, 'LEFT')" class="col-1" style="padding: 0px; margin-left: 15px;"><i
+                <button (click)="updateStackPosition(stack, 'LEFT')" class="col-1"
+                    [disabled]="isFirstStackInArray(stack.id!)" style="padding: 0px; margin-left: 15px;"><i
                         class="bi bi-arrow-left-square"></i></button>
                 <div class="col">
                     <p class="col" style="text-align: center; margin-bottom: 0px;"><b>{{stack.name}}</b>&nbsp;&nbsp;
@@ -12,7 +13,8 @@
                         <button (click)="openModalNewTask(stack.id)"><i class="bi bi-plus-square-dotted"></i></button>
                     </p>
                 </div>
-                <button (click)="updateStackPosition(stack, 'RIGHT')" class="col-1" style="padding: 0px; margin-right: 15px;"><i
+                <button (click)="updateStackPosition(stack, 'RIGHT')" class="col-1"
+                    [disabled]="isLastStackInArray(stack.id!)" style="padding: 0px; margin-right: 15px;"><i
                         class="bi bi-arrow-right-square"></i></button>
             </div>
             <div cdkDropList [cdkDropListData]="findTasksByStack(stack.id!)" class="example-list"
