--- a/src/app/board-management/board-list/board-list.component.html
+++ b/src/app/board-management/board-list/board-list.component.html
@@ -19,8 +19,7 @@
                 <button type="button" class="btn btn-light" (click)="openModalBoardDetails(board)">Detalhes</button>
                 <div *ngIf="board.owner!.id === sessionService.loggedUser.id">
                     <button type="button" class="btn btn-warning"
-                        [routerLink]="['/board-edit/', board.id]">Gerenciar</button>
-                    <button type="button" class="btn btn-danger" (click)="openModalBoardDelete(board)">Excluir</button>
+                        (click)="openGeneralBoardManagementDialog(board.id!)">Gerenciar</button>
                 </div>
             </div>
         </div>
