--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -11,7 +11,10 @@
                         (blur)="updateTask()"></textarea>
                 </div>
             </div>
-            <hr>
+            <div class="row" style="padding-top: 20px;">
+                <hr>
+            </div>
+            
             <div class="row">
                 <div class="col-9">
                     <b>Checklist</b>
@@ -67,7 +70,7 @@
                 <div class="btn-group-vertical" aria-label="Vertical button group">
                     <button type="button" class="btn btn-light btn-outline-dark"
                         (click)="openTaskMembersDialog()">Membros</button>
-                    <button type="button" class="btn btn-light btn-outline-dark" (click)="openTaskDueDateDialog()">Conf.
+                    <button type="button" class="btn btn-light btn-outline-dark" (click)="openTaskDeliveryDateDialog()">Conf.
                         vencimento</button>
                     <button type="button" class="btn btn-light btn-outline-dark"
                         (click)="openaskNotificationConfigurationDialog()">Conf. notificações</button>
