--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -14,7 +14,26 @@
             <div class="row" style="padding-top: 20px;">
                 <hr>
             </div>
-            
+            <div class="row" *ngIf="task.deliveryDate!= undefined && task.deliveryDate!.active">
+                <div class="col">
+                    <div class="card text-bg-light mb-3" style="padding: 0px;">
+                        <div class="card-header">Data de entrega</div>
+                        <div class="card-body">
+                            <p class="card-text">{{task.deliveryDate!.date}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-bg-light mb-3" style="padding: 0px;">
+                        <div class="card-header">Horário</div>
+                        <div class="card-body">
+                            <p class="card-text">{{task.deliveryDate!.time}}</p>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+            </div>
             <div class="row">
                 <div class="col-9">
                     <b>Checklist</b>
@@ -70,8 +89,9 @@
                 <div class="btn-group-vertical" aria-label="Vertical button group">
                     <button type="button" class="btn btn-light btn-outline-dark"
                         (click)="openTaskMembersDialog()">Membros</button>
-                    <button type="button" class="btn btn-light btn-outline-dark" (click)="openTaskDeliveryDateDialog()">Conf.
-                        vencimento</button>
+                    <button type="button" class="btn btn-light btn-outline-dark"
+                        (click)="openTaskDeliveryDateDialog()">Conf.
+                        dt. entrega</button>
                     <button type="button" class="btn btn-light btn-outline-dark"
                         (click)="openaskNotificationConfigurationDialog()">Conf. notificações</button>
                 </div>
