--- a/src/app/board-management/dialog-general-management/dialog-general-management.component.html
+++ b/src/app/board-management/dialog-general-management/dialog-general-management.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col">
         <div class="row" style="padding-bottom: 5px;">
-            <button type="button" class="btn btn-secondary">Gerenciar membros</button>
+            <button type="button" class="btn btn-secondary" (click)="openDialogMembersManagement()">Gerenciar membros</button>
         </div>
         <div class="row" style="padding-bottom: 5px;">
             <button type="button" class="btn btn-secondary" (click)="openDialogBoardEdit()">Editar informações
