--- a/src/app/working-area/board-panel/board-panel.component.css
+++ b/src/app/working-area/board-panel/board-panel.component.css
@@ -1,11 +1,19 @@
-body {
+.outer-div {
   position: absolute;
   background-color: cadetblue;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  width: fit-content;
+  height: fit-content;
+}
+
+.principal {
+  display: inline-block;
+  white-space: nowrap;
+  width: auto;
+  height: auto;
+  background-color: cadetblue;
 }
 
 .example-container {
