--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="width: 1000px; height: 700px;" *ngIf="task != undefined">
+<div class="container" style="width: 1000px; height: 780px;" *ngIf="task != undefined">
     <div class="row">
         <div class="col-9">
             <div>
@@ -37,7 +37,8 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-success" (click)="completeTask()" [hidden]="task.deliveryDate.accomplished">Marcar data de entrega como atentida</button>
+                <button type="button" class="btn btn-success" (click)="completeTask()"
+                    [hidden]="task.deliveryDate.accomplished">Marcar data de entrega como atentida</button>
                 <hr>
             </div>
             <div class="row">
@@ -98,7 +99,23 @@
                         dt. entrega</button>
                     <button type="button" class="btn btn-light btn-outline-dark"
                         (click)="openaskNotificationConfigurationDialog()">Conf. notificações</button>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-light btn-outline-dark dropdown-toggle"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Etiquetas
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Criar nova etiqueta</a></li>
+                            <hr>
+                            <li><b><p>{{task.tag!.name}}</p></b></li>
+                            <hr>
+                            <div *ngFor="let tag of availableTags">
+                                <li><a class="dropdown-item" href="#">{{tag.name}}</a></li>
+                            </div>
+                        </ul>
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
