--- a/src/app/working-area/dialog-task/dialog-task.component.html
+++ b/src/app/working-area/dialog-task/dialog-task.component.html
@@ -105,15 +105,17 @@
                             Etiquetas
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" (click)="openDialogTagsManagement()" style="cursor: pointer;">Gerenciar etiquetas</a>
+                            <li><a class="dropdown-item" (click)="openDialogTagsManagement()"
+                                    style="cursor: pointer;">Gerenciar etiquetas</a>
                             </li>
                             <hr>
-                            <li *ngIf="task.tag!.id != undefined">
+                            <li *ngIf="task.tag != undefined && task.tag!.id != undefined">
                                 <p class="dropdown-item"><b>{{task.tag!.name}}</b><i class="bi bi-check-lg"></i></p>
                             </li>
                             <hr>
                             <div *ngFor="let tag of availableTags">
-                                <li *ngIf="tag.id! != task.tag!.id!" style="cursor: pointer;"><a class="dropdown-item" (click)="updateTaskTag(tag.id!)">{{tag.name}}</a></li>
+                                <li *ngIf="task.tag != undefined && (tag.id! != task.tag!.id!)" style="cursor: pointer;"><a class="dropdown-item"
+                                        (click)="updateTaskTag(tag.id!)">{{tag.name}}</a></li>
                             </div>
                         </ul>
                     </div>
