Renaming component and including name tag to input on DialogBoardInsertComponent

--- a/src/app/board-management/dialog-board-insert/dialog-board-insert.component.html
+++ b/src/app/board-management/dialog-board-insert/dialog-board-insert.component.html
@@ -21,7 +21,7 @@
                 <p>Descrição:</p>
             </div>
             <div class="col">
-                <input type="text" class="form-control" [(ngModel)]="newBoard.description">
+                <input type="text" class="form-control" name="description" [(ngModel)]="newBoard.description">
             </div>
         </div>
         <br>
